# lab02_pencils_template

./: .gitignore  CMakeLists.txt  README.md  RGBA.h  main.cpp  mainwindow.h
src/: RGBA.h  main.cpp  mainwindow.cpp  mainwindow.h
src/ui/: colorcanvas.cpp  colorcanvas.h  graycanvas.cpp  graycanvas.h  supportcanvas2d.cpp
ui/: colorcanvas.cpp  colorcanvas.h  graycanvas.cpp  graycanvas.h  supportcanvas2d.cpp  supportcanvas2d.h
